--- a/index.html
+++ b/index.html
@@ -151,6 +151,55 @@
     </div>
   </div>
 
+  <div class="modal fade" id="add-parrot-modal" tabindex="-1" aria-labelledby="addParrotTitle" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="addParrotTitle">Add parrot</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3">
+              <label for="parrot-title" class="form-label">Title</label>
+              <input type="search" class="form-control" id="parrot-title" required placeholder="Kakatu">
+            </div>
+            <div class="mb-3">
+              <label for="parrot-img" class="form-label">Img URL</label>
+              <input type="text" class="form-control" id="parrot-img" required placeholder="https://...">
+            </div>
+            <div class="mb-3">
+              <label for="price" class="form-label">Price ($)</label>
+              <input type="number" class="form-control" id="price" required placeholder="1000">
+            </div>
+            <div class="mb-3">
+              <label for="parrot-date" class="form-label">Birth date</label>
+              <input type="date" class="form-control" id="parrot-date" required placeholder="12.02.2022">
+            </div>
+            
+            <div class="mb-3">
+              <label class="form-label">Width and Height</label>
+              <div class="row">
+                <div class="col-6">
+                  <input type="number" class="form-control" id="parrot_width" min="0" aria-label="Parrot width"  placeholder="Parrot width">
+                </div>
+                <div class="col-6">
+                  <input type="number" class="form-control" id="parrot_height" min="0" aria-label="Parrot height"  placeholder="Parrot height">
+                </div>
+              </div>
+            </div>
+
+            <div class="mb-3">
+              <label for="features" class="form-label">Features ("," bilan ajratib yozing)</label>
+              <input type="text" class="form-control" id="features" required placeholder="Qo'lga o'rgatilgan,Gapira oladi">
+            </div>
+            <button type="submit" class="btn btn-primary d-block w-100 p-2">Filter</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="js/bootstrap.bundle.min.js"></script>
 
   <script src="js/data.js"></script>
