--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
       </div>
     </div>
   </div>
+  <!------------------------- EDIT ------------------------->
 
   <div class="modal fade" id="edit-parrot-modal" tabindex="-1" aria-labelledby="editParrotTitle" aria-hidden="true">
     <div class="modal-dialog">
